# primer

./: .gitignore  CMakeLists.txt  Version_test.h  vcpkg.json
anotaciones/: book.toml
anotaciones/src/: SUMMARY.md  chapter_1.md
ch_01/: CMakeLists.txt  README.md  Sales_item.h  add  add.cpp  add_item2.cpp  avg_price.cpp  comments.cpp  count_numbers.cpp  for_ex.cpp  forcount.cpp  item_io.cpp  main_only.cpp  mysum.cpp  occurs.cpp  test_01.cpp  whilecount.cpp
ch_02/: CMakeLists.txt  Sales_data.h  compounddecls.cpp  convs.cpp  dbl_ptr.cpp  inits.cpp  literals.cpp  ref-ex.cpp
ch_03/: CMakeLists.txt  hexify.cpp  multidim.cpp  ptr_traversal2.cpp  square.cpp  strcompare.cpp  vecSubs.cpp  vec_decls.cpp
ch_04/: CMakeLists.txt  arraysizeof.cpp  sizeof_pgm.cpp
ch_05/: CMakeLists.txt  ifgrades.cpp  rangefor.cpp
ch_06/: CMakeLists.txt  arrRet.cpp  errMsg_initList.cpp  refparms.cpp  wdebug.cpp
ch_07/: Account.h  CMakeLists.txt  Debug.cpp  Debug.h  Screen.h  useDebug.cpp
ch_08/: CMakeLists.txt
ch_09/: CMakeLists.txt  erase2.cpp  refreshIter.cpp
ch_10/: CMakeLists.txt  equal.cpp  inserters.cpp  rev-iters.cpp  reverse.cpp  use_find.cpp
ch_11/: CMakeLists.txt  map1.cpp  multimap.cpp  pair.cpp  restricted_count.cpp  setOps.cpp  unorderedWordCount.cpp  wcEx.cpp
ch_12/: CMakeLists.txt  StrBlob.h  TextQuery.h  oknew.cpp  useBlob.cpp  usealloc2.cpp
ch_13/: CMakeLists.txt  StrFolder.h  StrVec.h  String.cpp  String.h  copyNoMove.cpp  moveHP.cpp  small_SI.h  useStrVec.cpp
ch_14/: CMakeLists.txt  Sales_data.h  calc.cpp  fcnobj.cpp  newcount-size.cpp  readStr.cpp
ch_15/: Basket.h  CMakeLists.txt  Query.h  Quote.h
ch_16/: Array.cpp  Blob.h  CMakeLists.txt  Vec.h  compare.cpp  compareDef.cpp  expansion.cpp  qm.cpp  trail-ret.cpp  typealias.cpp  useBlob.cpp  useChcking.cpp  variadic.cpp  variadic3.cpp
ch_17/: CMakeLists.txt  normalInts.cpp  rand2.cpp  tuple.cpp
ch_18/: Animal.h  Animal_virtual_baseVers.h  CMakeLists.txt  Sales_data.h  mi-scope.cpp  spec.cpp
ch_19/: CMakeLists.txt  Screen.h  Token.h  calc.cpp  enum.cpp  memFN-bind.cpp  tok2.cpp  useScreen.cpp
