cmake_minimum_required(VERSION 3.20)
project(chapter_01 CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
message("Windows")
set(CMAKE_CXX_FLAGS  "/EHsc")
endif()
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
set(BUILD_SHARED_LIBS OFF)
set(CMAKE_EXE_LINKER_FLAGS "-static")
add_link_options("-static")
add_subdirectory(ch_01)