cmake_minimum_required(VERSION 3.20)
project(chapter_01 CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
message("Windows")
set(CMAKE_CXX_FLAGS  "/EHsc")
endif()
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
set(BUILD_SHARED_LIBS OFF)
set(CMAKE_EXE_LINKER_FLAGS "-static")
add_link_options("-static")
add_definitions(-DCONSTEXPR_VARS -DCONSTEXPR_FCNS -DCONSTEXPR_CTORS -DDEFAULT_FCNS -DDELETED_FCNS -DFUNC_CPP -DFUNCTION_PTRMEM -DIN_CLASS_INITS -DINITIALIZER_LIST -DLIST_INIT -DLROUND -DNOEXCPT -DSIZEOF_MEMBER -DTEMPLATE_FCN_DEFAULT_ARGS -DTYPE_ALIAS_DECLS -DUNION_CLASS_MEMS -DVARIADICS)
add_subdirectory(ch_01)
add_subdirectory(ch_02)
add_subdirectory(ch_03)
add_subdirectory(ch_04)
add_subdirectory(ch_05)
add_subdirectory(ch_06)
add_subdirectory(ch_07)
add_subdirectory(ch_08)
add_subdirectory(ch_09)
add_subdirectory(ch_10)
add_subdirectory(ch_11)
add_subdirectory(ch_12)
add_subdirectory(ch_13)
add_subdirectory(ch_14)
add_subdirectory(ch_15)
add_subdirectory(ch_16)
#add_subdirectory(ch_17)
add_subdirectory(ch_18)
add_subdirectory(ch_19)