add_executable(add add.cpp)
add_executable(add_item add_item.cpp)
add_executable(add_item2 add_item2.cpp)
add_executable(avg_price avg_price.cpp)
add_executable(comments comments.cpp)
add_executable(count count_numbers.cpp)
add_executable(forex for_ex.cpp)
add_executable(forcount forcount.cpp)
add_executable(itemio item_io.cpp)
add_executable(minimal main_only.cpp)
add_executable(mysum mysum.cpp)
add_executable(occurs occurs.cpp)
add_executable(whilecount whilecount.cpp)
target_include_directories(add_item PRIVATE ${CMAKE_SOURCE_DIR})