include_directories(../ch_01)
add_executable(compounds compounddecls.cpp)
add_executable(compounddecls compounddecls.cpp)
add_executable(convs convs.cpp)
add_executable(dbl_ptr dbl_ptr.cpp)
add_executable(decl-ex decl-ex.cpp)
add_executable(escape escape.cpp)
add_executable(inits inits.cpp)
add_executable(literals literals.cpp)
add_executable(ref-ex ref-ex.cpp)
add_executable(scope_levels scope_levels.cpp)
add_executable(unsigned unsigned.cpp)
add_executable(Sales_data Sales_data.cpp)