add_executable(arrRet arrRet.cpp)
add_executable(count-calls count-calls.cpp)
add_executable(errMsg_initList errMsg_initList.cpp)
add_executable(fact fact.cpp LocalMath.cpp)
add_executable(fcnptrRet fcnptrRet.cpp)
add_executable(good_printmain good_printmain.cpp)
add_executable(inline_shorter inline_shorter.cpp)
add_executable(mainmath mainmath.cpp LocalMath.cpp)
add_executable(mainret mainret.cpp)
add_executable(mk_plural mk_plural.cpp)
add_executable(ref-fcn ref-fcn.cpp)
add_executable(refparms refparms.cpp)
add_executable(refret-ex refret-ex.cpp)
add_executable(reset reset.cpp)
add_executable(stl-arr-fcns stl-arr-fcns.cpp)
add_executable(usefcnptr usefcnptr.cpp)
add_executable(wdebug wdebug.cpp)