add_executable(capacity capacity.cpp)
add_executable(erase1 erase1.cpp)
add_executable(erase2 erase2.cpp)
add_executable(find_ops find_ops.cpp)
add_executable(find-str find-str.cpp)
add_executable(refreshIter refreshIter.cpp)
add_executable(stack stack.cpp)
add_executable(str_assignOps str_assignOps.cpp)
add_executable(substr substr.cpp)
add_executable(useConvs useConvs.cpp)