include_directories("../ch_01" "../ch_06")
add_executable(absInt absInt.cpp)
add_executable(accum accum.cpp)
add_executable(accum4 accum4.cpp)
add_executable(avg_price_10 avg_price.cpp)
add_executable(bind2 bind2.cpp)
add_executable(elimDups elimDups.cpp)
add_executable(equal equal.cpp)
add_executable(equiv-istream-iter equiv-istream-iter.cpp)
add_executable(inserters inserters.cpp)
add_executable(iostream_iter iostream_iter.cpp)
add_executable(lambda lambda.cpp)
add_executable(newcount-size newcount-size.cpp)
add_executable(ostreamIter2 ostreamIter2.cpp)
add_executable(rcomma rcomma.cpp)
add_executable(reverse reverse.cpp)
add_executable(reverse-iter reverse-iter.cpp)
add_executable(rev-iters rev-iters.cpp)
add_executable(sortSI sortSI.cpp)
add_executable(use_find use_find.cpp)
add_executable(use-istream-iter use-istream-iter.cpp)