include_directories("../ch_07" "../ch_06")
add_executable(erasemap.cpp erasemap.cpp)
add_executable(map1.cpp map1.cpp "../ch_07/Sales_data.cpp")
add_executable(multimap.cpp multimap.cpp)
add_executable(pair.cpp pair.cpp)
add_executable(restricted_count.cpp restricted_count.cpp)
add_executable(setOps.cpp setOps.cpp)
add_executable(wcEx.cpp wcEx.cpp)
add_executable(unorderedWordCount.cpp unorderedWordCount.cpp)
add_executable(word_count.cpp word_count.cpp)
add_executable(word_transform.cpp word_transform.cpp)