include_directories("../ch_01" "../ch_06")
add_executable(absInt_14 absInt.cpp)
add_executable(add_14 add.cpp Sales_data.cpp)
add_executable(calc_14 calc.cpp)
add_executable(directcall directcall.cpp Sales_data.cpp)
add_executable(fcnobj fcnobj.cpp)
add_executable(newcount-size_14 newcount-size.cpp)
add_executable(readStr readStr.cpp)