include_directories("../ch_12" "../ch_06")
add_executable(andQueryTest andQueryTest.cpp Query.cpp get_print.cpp "../ch_12/TextQuery.cpp")
add_executable(and_orQueryTest and_orQueryTest.cpp Query.cpp get_print.cpp "../ch_12/TextQuery.cpp" )
add_executable(Basket_main Basket_main.cpp Basket.cpp Quote.cpp)
add_executable(wordQueryTest wordQueryTest.cpp Query.cpp "../ch_12/TextQuery.cpp" get_print.cpp)
add_executable(sample sample.cpp Quote.cpp)
add_executable(scope scope.cpp)
add_executable(useQuote useQuote.cpp Quote.cpp)
add_executable(vecBasket vecBasket.cpp Basket.cpp Quote.cpp)
add_executable(virtualsNscope virtualsNscope.cpp)