#TODO add properties to different executables

add_executable(Array Array.cpp)
add_executable(array-parms4 array-parms4.cpp)
add_executable(compare compare.cpp)
add_executable(compareDef compareDef.cpp Sales_data.cpp)
add_executable(compareSpec compareSpec.cpp)
add_executable(debug debug.cpp)
add_executable(flip flip.cpp)
add_executable(multiset multiset.cpp Sales_data.cpp)
add_executable(overloaded debug.cpp)
add_executable(overSpec overSpec.cpp)
add_executable(qm qm.cpp build.cpp)
add_executable(SP SP.cpp)
add_executable(special special.cpp)
add_executable(specialized debug.cpp)
add_executable(trail-ret trail-ret.cpp)
add_executable(useBlob_16 useBlob.cpp)
add_executable(useChcking useChcking.cpp)
add_executable(Vecmain Vecmain.cpp)
add_executable(variadic variadic.cpp Sales_data.cpp)
add_executable(variadic3 variadic3.cpp Sales_data.cpp)
set_target_properties(overloaded PROPERTIES DEFINE_SYMBOL OVERCHAR)
set_target_properties(specialized PROPERTIES DEFINE_SYMBOL SPECIALIZED)