include_directories("../ch_14")
add_executable(badgetc badgetc.cpp)
add_executable(bits bits.cpp)
add_executable(findbook findbook.cpp ../ch_14/Sales_data.cpp)
add_executable(game game.cpp)
add_executable(getc getc.cpp)
add_executable(getput getput.cpp)
add_executable(manips manips.cpp)
add_executable(normalInts normalInts.cpp)
add_executable(no-skipws no-skipws.cpp)
add_executable(point point.cpp)
add_executable(prec17 prec.cpp)
add_executable(rand1 rand1.cpp)
add_executable(rand2 rand2.cpp)
add_executable(rand4 rand4.cpp)
add_executable(rand6 rand6.cpp)
add_executable(seed seed.cpp)
add_executable(seek seek.cpp)
add_executable(setw setw.cpp)
add_executable(skipws skipws.cpp)
add_executable(tuple tuple.cpp)
add_executable(phones phones.cpp)
add_executable(ccpgms ccpgms.cpp)
add_executable(validatePhones validatePhones.cpp)
add_executable(phonesFinal phonesFinal.cpp)
add_executable(subexpr subexpr.cpp)
add_executable(regex1 regex1.cpp)
add_executable(zips zips.cpp)
add_executable(REerrs REerrs.cpp)
add_executable(manips11 manips11.cpp)
add_executable(sci_dec sci_dec.cpp)