set(BOOK_HEADERS bookexcept.h Sales_data.h)
set(VIRT_HEADERS Animal_virtual_baseVers.h)
set(ANIMAL_HEADERS Animal.h)

add_executable(animal Animal.cpp)
add_executable(book book.cpp Sales_data.cpp)
add_executable(class class.cpp)
add_executable(ex-over ex-over.cpp)
add_executable(inherit inherit.cpp)
add_executable(mi-scope mi-scope.cpp)
add_executable(over over.cpp)
add_executable(over2 over2.cpp)
add_executable(spec spec.cpp)
add_executable(usingDirective usingDirective.cpp)
add_executable(virt-inherit virt-inherit.cpp)