include_directories("../ch_07")
add_executable(bitfields bitfields.cpp)
add_executable(calc calc.cpp)
add_executable(dyn_cast dyn_cast.cpp)
add_executable(enum enum.cpp)
add_executable(enum-match enum-match.cpp)
add_executable(memFn-bind memFN-bind.cpp)
add_executable(tok2 tok2.cpp)
add_executable(typeid typeid.cpp)
add_executable(useScreen_19 Screen.cpp useScreen.cpp)
